권한관리메뉴 추가